# qa_agent

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
src/qa_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/qa_agent_app/: __init__.py  agent.py  config.py  fallback_graph.py  github_collector.py  graph_loader.py  graphify_client.py  ingestion.py  main.py  models.py  storage.py
src/qa_agent_app/static/: app.js  chat.css  chat.html  chat.js  index.html  styles.css
tests/: test_agent.py  test_agent_topic_draft.py  test_config.py  test_fallback_graph.py  test_github_collector.py  test_graph_loader.py  test_graphify_client.py  test_ingestion.py  test_main.py  test_main_helpers.py  test_storage.py
tests/graphify-out/cache/: stat-index.json
