[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-agent"
version = "0.1.0"
description = "Topic-managed Graph RAG Q&A web app using LangGraph and Graphify"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qa_agent_app = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
